--- a/scripts/stats_pdm_covid/export_config.json
+++ b/scripts/stats_pdm_covid/export_config.json
@@ -9,8 +9,8 @@
         "user":      true,
         "way_nodes": false
     },
-    "linear_tags":  [],
-    "area_tags":    [],
+    "linear_tags":  true,
+    "area_tags":    true,
     "exclude_tags": [],
     "include_tags": ["*:covid19"]
 }
